<resources>
    <string name="app_name">快买酒</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- 主界面的字符集-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">首页</string>
    <string name="category_fragment">分类</string>
    <string name="cart_fragment">购物车</string>
    <string name="profile_fragment">我的</string>


    <!--登录以用到的字符 -->
    <string name="hint_tel">手机号</string>
    <string name="hint_username">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="text_register">注册</string>
    <string name="find_password">忘记密码?</string>
    <string name="text_wxlogin">第三方等录</string>


    <!--注册用到的字符  -->
    <string name="register_hint_tel" >请输入注册手机号</string>
    <string name="register_hint_recognize_code">图形验证码，点击图片即可刷新</string>
    <string name="btn_getRegCode">获取验证码</string>
    <string name="left_text01">已有账户？</string>
    <string name="left_text02">请登录</string>


    <!-- 找回密码-->
    <string name="find_hint_tel">请输入绑定的手机号</string>
    <string name="find_hint_recognizecode">图形验证码，点击图片即可刷新</string>
    <string name="fint_left_text">系统会发送短信验证码到您的手机</string>
    <string name="title_find_password">找回密码</string>
    <string name="get_recognized_code">获取验证码</string>



    <!--用户协议相关-->
    <string name="agree_login">登录即表示同意</string>
    <string name="user_deal">《快买酒用户协议》</string>
    <string name="tel_title">+86</string>
    <string name="recognized_code">验证码</string>

</resources>
