<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_cancle"
        android:src="@drawable/ic_cancel"
        android:layout_width="20dp"
        android:layout_margin="12dp"
        android:layout_height="20dp" />
    <EditText
        android:id="@+id/et_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="@string/register_hint_tel" />
    <LinearLayout
        android:id="@+id/layout_recognized_code"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/et_tel"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/find_hint_recognizecode" />
        <TextView
            android:id="@+id/tv_show_recognized_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="7684"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_get_recognized_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_recognized_code"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:background="#000"
        android:text="@string/get_recognized_code"
        android:textColor="#ffff" />
    <LinearLayout
        android:layout_margin="8dp"
        android:layout_below="@+id/btn_get_recognized_code"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_text01"
            android:textColor="#000"
            />
        <TextView
            android:id="@+id/please_login"
            android:text="@string/left_text02"
            android:textColor="#FF1493"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>




</RelativeLayout>