<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_title" />

    <EditText
        android:id="@+id/et_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="@string/find_hint_tel" />

    <LinearLayout
        android:id="@+id/layout_recognized_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_tel"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/find_hint_recognizecode" />

        <TextView
            android:id="@+id/tv_show_recognized_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="7684"
            android:textSize="20sp" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_get_recognized_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_recognized_code"
        android:layout_margin="5dp"
        android:layout_marginTop="20dp"
        android:background="#000"
        android:text="@string/get_recognized_code"
        android:textColor="#ffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_get_recognized_code"
        android:text="@string/fint_left_text"
        android:textColor="#000" />


</RelativeLayout>